--- a/app/public/css/common.pcss
+++ b/app/public/css/common.pcss
@@ -5,7 +5,7 @@
       display: inline-block;
       width: 200px;
       height: 200px;
-      background-image: url("../img/ico-header-logo.png");
+      background-image: url("../img/pic/ico-header-logo_iamincss.png");
       background-size: contain;
       background-repeat: no-repeat;
     }
