--- a/app/public/css/index.pcss
+++ b/app/public/css/index.pcss
@@ -1,3 +1,30 @@
-.index{
-  color: brown;
+.index-body {
+  display: flex;
+  flex-direction: column;
+  .index-body__nav {
+    order: 0;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 50px;
+  }
+  .index-body__cont {
+    order: 1;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: auto;
+    display: flex;
+    flex-direction: column;
+    .index-body__cont--info {
+      order: 0;
+      flex-grow: 0;
+      flex-shrink: 0;
+      flex-basis: 40px;
+    }
+    .index-body__cont--entry {
+      order: 1;
+      flex-grow: 1;
+      flex-shrink: 1;
+      flex-basis: auto;
+    }
+  }
 }
