添加lodash，系统主页面入口增加，数据管理大模块增加主页面内容

--- a/app/public/css/MyLayout.pcss
+++ b/app/public/css/MyLayout.pcss
@@ -36,6 +36,7 @@
       -ms-grid-column: 2;
       grid-area: proj-layout__body;
       padding: 10px;
+      background-color: #f5f5f5;
     }
     .proj-layout__copy {
       -ms-grid-row: 3;
@@ -43,6 +44,7 @@
       -ms-grid-column-span: 2;
       grid-area: proj-layout__copy;
       text-align: center;
+      line-height: 40px;
     }
   }
 }
