--- a/app/public/css/dataList.pcss
+++ b/app/public/css/dataList.pcss
@@ -1,26 +1,28 @@
-.index-body {
+.dataList-body {
   display: flex;
   flex-direction: column;
-  .index-body__nav {
+  .dataList-body__nav {
     order: 0;
     flex-grow: 0;
     flex-shrink: 0;
     flex-basis: 40px;
   }
-  .index-body__cont {
+  .dataList-body__cont {
     order: 1;
     flex-grow: 1;
     flex-shrink: 1;
     flex-basis: auto;
     display: flex;
     flex-direction: column;
-    .index-body__cont--info {
+    padding: 10px 10px 1px;
+    background-color: white;
+    .dataList-body__cont--info {
       order: 0;
       flex-grow: 0;
       flex-shrink: 0;
       flex-basis: 40px;
     }
-    .index-body__cont--entry {
+    .dataList-body__cont--entry {
       order: 1;
       flex-grow: 1;
       flex-shrink: 1;
