增加：工程分析主页面；增加：各页面右上角操作按钮组组件

--- a/app/public/css/projectAnalysis.pcss
+++ b/app/public/css/projectAnalysis.pcss
@@ -1,15 +1,16 @@
 /* autoprefixer grid: autoplace */
 /*这里加不加上面注释都可以。gulp环境必须加*/
-.recycle-body {
+.projectAnalysis-body {
   display: flex;
   flex-direction: column;
-  .recycle-body__nav {
+  height: 100%;
+  .projectAnalysis-body__nav {
     order: 0;
     flex-grow: 0;
     flex-shrink: 0;
     flex-basis: 40px;
   }
-  .recycle-body__cont {
+  .projectAnalysis-body__cont {
     order: 1;
     flex-grow: 1;
     flex-shrink: 1;
@@ -18,17 +19,16 @@
     flex-direction: column;
     padding: 10px 10px 1px;
     background-color: white;
-    .recycle-body__cont--opera {
-      order: 0;
-      flex-grow: 0;
-      flex-shrink: 0;
-      flex-basis: auto;
+    height: calc(100% - 40px);
+    .projectAnalysis-body__contIn {
+      position: relative;
+      height: 100%;
     }
-    .recycle-body__cont--table {
-      order: 1;
-      flex-grow: 1;
-      flex-shrink: 0;
-      flex-basis: auto;
-    }
+  }
+  .Resizer.horizontal {
+    opacity: .5;
+  }
+  .Resizer.horizontal:after {
+    content: '选中的数据：';
   }
 }
