--- a/app/public/css/MyLayout.pcss
+++ b/app/public/css/MyLayout.pcss
@@ -43,7 +43,7 @@
         flex-shrink: 1;
         flex-basis: auto;
         padding-right: 20px;
-        text-align: right;
+        text-align: center;
       }
     }
     .proj-layout__menu {
