--- a/app/public/css/dataList.pcss
+++ b/app/public/css/dataList.pcss
@@ -18,16 +18,16 @@
     flex-direction: column;
     padding: 10px 10px 1px;
     background-color: white;
-    .dataList-body__cont--info {
+    .dataList-body__cont--opera {
       order: 0;
       flex-grow: 0;
       flex-shrink: 0;
-      flex-basis: 40px;
+      flex-basis: auto;
     }
-    .dataList-body__cont--entry {
+    .dataList-body__cont--table {
       order: 1;
       flex-grow: 1;
-      flex-shrink: 1;
+      flex-shrink: 0;
       flex-basis: auto;
     }
   }
