feat(comp-snow, postcss): 增加雪花效果，增加postcss-syntax依赖
增加：Snow组件（背景雪花效果），增加：postcss-syntax依赖以及其他的postcss syntaxes

--- a/app/public/css/common.pcss
+++ b/app/public/css/common.pcss
@@ -1,11 +1,17 @@
 #app {
-  span.isNotLast:hover {
-    color: #23527c;
-  }
-  span.isLast, span.isNotLast {
-    font-size: 16px;
-  }
+  opacity: 0.8;
+  z-index: 0;
   .highlightClassName {
     color: red;
   }
+}
+#appBackground {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -3;
 }
