--- a/app/public/css/MyLayout.pcss
+++ b/app/public/css/MyLayout.pcss
@@ -26,6 +26,7 @@
       grid-area: proj-layout__btn;
       display: flex;
       flex-direction: row;
+      background-color: #fff;
       .proj-layout__btn__l {
         order: 0;
         flex-grow: 0;
@@ -57,7 +58,7 @@
       -ms-grid-column: 2;
       grid-area: proj-layout__body;
       padding: 10px;
-      background-color: #f5f5f5;
+      background-color: #F5FFFA;
     }
     .proj-layout__copy {
       -ms-grid-row: 3;
@@ -66,6 +67,7 @@
       grid-area: proj-layout__copy;
       text-align: center;
       line-height: 40px;
+      background-color: #fff;
     }
   }
 }
