--- a/app/public/scss/Snow.scss
+++ b/app/public/scss/Snow.scss
@@ -1,6 +1,8 @@
+$snow-color-a: rgba(218, 112, 214, 0);
+$snow-color: #DA70D6;
 .snowContainer {
   height: 100%;
-  background: #000;
+  background: #fff;
   position: relative;
   color: #fff;
   .span {
@@ -9,15 +11,15 @@
     border-radius: 50%;
     display: inline-block;
     background-image: linear-gradient(
-        180deg,
-        rgba(255, 255, 255, 0) 40%,
-        #fff 40%,
-        #fff 60%,
-        rgba(255, 255, 255, 0) 60%
-      ),
-      linear-gradient(90deg, rgba(255, 255, 255, 0) 40%, #fff 40%, #fff 60%, rgba(255, 255, 255, 0) 60%),
-      linear-gradient(45deg, rgba(255, 255, 255, 0) 43%, #fff 43%, #fff 57%, rgba(255, 255, 255, 0) 57%),
-      linear-gradient(135deg, rgba(255, 255, 255, 0) 43%, #fff 43%, #fff 57%, rgba(255, 255, 255, 0) 57%);
+                    180deg,
+                    $snow-color-a 40%,
+                    $snow-color 40%,
+                    $snow-color 60%,
+                    $snow-color-a 60%
+    ),
+    linear-gradient(90deg, $snow-color-a 40%, $snow-color 40%, $snow-color 60%, $snow-color-a 60%),
+    linear-gradient(45deg, $snow-color-a 43%, $snow-color 43%, $snow-color 57%, $snow-color-a 57%),
+    linear-gradient(135deg, $snow-color-a 43%, $snow-color 43%, $snow-color 57%, $snow-color-a 57%);
 
     position: absolute;
     top: -30px;
@@ -30,7 +32,7 @@
 // 起始位置
 @for $i from 1 through 100 {
   .animation[data-animation-position='#{$i}'] {
-    left: #{$i}vw;
+    left: calc(#{$i}vw - #{$i}*0.7px);
   }
 }
 // 速度
@@ -70,7 +72,7 @@ $timing: (
     opacity: 0.5;
   }
   100% {
-    top: 100vh;
+    top: calc(100% - 40px);
     opacity: 1;
   }
 }
