refactor(comp-datalist): 搜索后雪花背景优化
搜索后雪花背景自适应高度

--- a/app/public/css/common.pcss
+++ b/app/public/css/common.pcss
@@ -1,6 +1,13 @@
 #app {
   opacity: 0.8;
   z-index: 0;
+  span.isNotLast:hover {
+    color: #23527c;
+  }
+  span.isLast,
+  span.isNotLast {
+    font-size: 16px;
+  }
   .highlightClassName {
     color: red;
   }
